--- a/projects/admin/src/assets/i18n/ar.json
+++ b/projects/admin/src/assets/i18n/ar.json
@@ -50,9 +50,9 @@
     "in-Active":"ايقاف التنشيط",
     "active":"تنشيط",
     "no-Matching":"لا توجد عناصر مطابقة",
-    "userSearch":"البحث بواسطة المستخدم",
-    "emailSearch":"البحث بواسطة الإيميل",
-    "actions":"إجراءات"
+    "FilterTable":"... بحث",
+    "actions":"إجراءات",
+    "selectItems":"إختر عدد الحقول التى تود إظهارها"
   },
   "addTask":{
     "newTask":"إضافة مهمة جديدة",
@@ -62,7 +62,8 @@
     "img":"إضافة صورة",
     "deadline":"إضافة الموعد النهائى للمهمة",
     "description":"... إضافة وصف",
-    "create":"إنشاء المهمة"
+    "create":"إنشاء المهمة",
+    "update":"تحديث المهمة"
 },
   "general":{
           "loading":"انـتـظـار"
@@ -75,6 +76,7 @@
     "loginSucs":"تم تسجيل الدخول بنجاح",
     "createSucs":"تم إنشاء المهمة بنجاح",
     "updateSucs":"تم تحديث المهمة بنجاح",
+    "deleteTask":"تم حذف المهمة بنجاح",
     "deleteSucs":"تم حذف المستخدم بنجاح",
     "chanStatSucs":"تم تحديث حالة المستخدم بنجاح",
     "CantDelete":"لا يمكن إزالة المستخدم حتى ينهى جميع مهامه",
