--- a/projects/admin/src/assets/i18n/en.json
+++ b/projects/admin/src/assets/i18n/en.json
@@ -48,9 +48,9 @@
     "in-Active":"In-Active",
     "active":"Active",
     "no-Matching":"No matching elements",
-    "userSearch":"Search By User",
-    "emailSearch":"Search By Email",
-    "actions":"Actions"
+    "FilterTable":"Search ...",
+    "actions":"Actions",
+    "selectItems":"select page of user"
   },
   "addTask":{
     "newTask":"Add New Task",
@@ -60,7 +60,8 @@
     "img":"Choose Image",
     "deadline":"Choose Deadline Date",
     "description":"Add Description ...",
-    "create":"Create"
+    "create":"Create",
+    "update":"Update"
 
 },
   "general":{
@@ -74,6 +75,7 @@
     "loginSucs":"Login Successfully",
     "createSucs":"Task Created Successfully",
     "updateSucs":"Task Updated Successfully",
+    "deleteTask":"Task Deleted successfully",
     "deleteSucs":"User Deleted successfully",
     "chanStatSucs":"User Status Updated Successfully",
     "CantDelete":"Can't Delete This User Until Finsh His Tasks",
